fix: harden requirement extraction and rescore visibility (#15)
Extraction hygiene, all deterministic and scoring-neutral by construction:

- Technology extraction order is now stable. Map.copyOf salts its iteration
  order per JVM run, so identical text produced differently ordered technology
  lists and ExtractedRequirements record equality was unstable across runs.
  Nothing depended on that while rescore membership compared scores only.
- REST is extracted only from qualified evidence: the API/service/endpoint/
  controller forms, RESTful, JAX-RS, Spring REST, the technical shorthands
  HTTP/REST, REST/JSON and APIs (REST), after an explicit technical introducer,
  and as a complete item in a delimited technology list. The list delimiter is
  never a bare space, which is what keeps "Rest Assured" and "the rest of the
  stack" negative.
- Go is extracted only from unambiguous spellings or from a delimited language
  list with a recognised neighbour that terminates as a list item, so ordinary
  English "go" no longer counts as evidence.
- SpringBoot and Spring-Boot canonicalise to Spring Boot; JVM becomes its own
  canonical term, in no skill list and not a programming language.
- Postgres -> PostgreSQL stays deliberately deferred to the scoring redesign,
  pinned by a regression test, because PostgreSQL is an equally weighted
  backend skill today.

Rescore preview visibility:

- Plan membership follows either persisted projection, not the score alone.
  The write transaction already re-persisted requirements whenever they
  differed, so requirement-only drift was being written without ever appearing
  in a preview.
- The preview reports scoreChanged, requirementsChanged, requirementsOnly,
  changedPlan and unchanged counts, and names every differing
  ExtractedRequirements field with sanitized, bounded old and new values.
  Raw values are compared before any display conversion, so two values that
  share a truncated prefix cannot be reported as equal.
- ScoreRes